2003-04-07  Darin Adler  <darin@apple.com>

        * WebView.subproj/WebUserAgentSpoofTable.c: Regenerated.
        When I landed my last change to the .gperf file I forgot to land this.

=== Safari-71 ===

2003-04-04  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        - fixed 3217687 -- REGRESSION: printing uses widths from screen fonts, messing up layout

        * WebCoreSupport.subproj/WebTextRendererFactory.m: Removed now-unused rendererWithFont:
        which called, the now-removed usingPrinterFonts method. WebCore now calls the one with
        the usingPrinterFont parameter.
        
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView drawRect:]): Remove setUsingPrinterFonts: calls. This is now handled by the
        document on the WebCore side. 
        (-[WebHTMLView _setPrinting:]): Ditto.

2003-04-04  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Trey.

	- fixed 3188914 - loop checking for Flash at http://www.scottsmind.com/celebrity_defacer/index.php
	
        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView loadRequest:inTarget:withNotifyData:]): Take a mutable request,
	and make sure to set referrer to the frame URL (as other browsers do).
        (-[WebBaseNetscapePluginView getURLNotify:target:notifyData:]): pass an NSMutableURLRequest.
        (-[WebBaseNetscapePluginView getURL:target:]): Likewise.
        (-[WebBaseNetscapePluginView _postURLNotify:target:len:buf:file:notifyData:allowHeaders:]):
	If the plug-in passes a Content-Length header, take it out of the
	headers and truncate the content appropriately to make
	WebFoundation happy.

2003-04-03  Richard Williamson  <rjw@apple.com>

        Fix checks for about: to avoid using our 'fake' request when
        using WebDataProtocol.  This fixes the assertion in the Snippet
        Editor.
        
        Reviewed by mjs.

        * WebView.subproj/WebMainResourceClient.m: